add demo padding

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     a:hover {
       text-decoration: underline;
     }
+
+    .player-container {
+      padding: 5px;
+      background: #000;
+    }
   </style>
 </head>
 
@@ -31,6 +36,7 @@
   <div class="center">
     <h2><a href="https://github.com/meowtec/ttyplayer.js">ttyplayer.js</a></h2>
     <div
+      class="player-container"
       data-termplayer-source="./example/tty.rec"
       data-termplayer-cols="80"
       data-termplayer-rows="30"
