use webpack, add speed controll

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-  <title>ttyplay.js demo</title>
-  <link rel="stylesheet" href="./dist/ttyplay.css"/>
-  <script src="./dist/ttyplay.js"></script>
+  <meta charset="utf-8">
+  <title>ttyplayer.js demo</title>
+  <link rel="stylesheet" href="./dist/ttyplayer.css"/>
+  <script src="./dist/ttyplayer.js"></script>
   <style>
     body {
       padding: 0;
