--- a/src/player.htm
+++ b/src/player.htm
@@ -1,18 +1,18 @@
 <div class="ttyplayer" ref="container">
-  <header class="ttyplayer-header">TTYPlayer</header>
+  <header class="ttyplayer-header"><a href="https://meowtec.github.io/ttyplayer.js/" target="_blank">TTYPlayer</a></header>
   <div class="ttyplayer-body" ref="body"></div>
   <footer class="ttyplayer-footer">
-    <button class="play hide" ref="playButton">
+    <button class="tty-play tty-hide" ref="playButton">
       <i></i>
       <span>play</span>
     </button>
-    <button class="pause hide" ref="pauseButton">
+    <button class="tty-pause tty-hide" ref="pauseButton">
       <i></i>
       <span>pause</span>
     </button>
-    <div class="button-wrap">
-      <div class="select-wrap" ref="speedSelect">
-        <div class="select">
+    <div class="tty-button-wrap">
+      <div class="tty-select-wrap" ref="speedSelect">
+        <div class="tty-select">
           <a href="#" data-value="8">8x</a>
           <a href="#" data-value="4">4x</a>
           <a href="#" data-value="2">2x</a>
@@ -21,7 +21,7 @@
           <a href="#" data-value="0.25">0.25x</a>
         </div>
       </div>
-      <button class="speed" ref="speedButton">
+      <button class="tty-speed" ref="speedButton">
         1x
       </button>
     </div>
